# PS5CTBRO

./: .gitignore  README.md  settings.gradle.kts
app/: CMakeLists.txt  build.gradle.kts
app/release/: output-metadata.json
app/release/baselineProfiles/0/: app-release.dm
app/release/baselineProfiles/1/: app-release.dm
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: native-lib.cpp
app/src/main/java/ps5ctbro/: MainActivity.kt
app/src/main/java/ps5ctbro/ui/: AppRoot.kt  AppSection.kt
app/src/main/java/ps5ctbro/ui/adaptive/: AdaptiveTriggerController.kt  AdaptiveTriggerControllerImpl.kt  AdaptiveTriggerModels.kt  AdaptiveTriggersUiState.kt  AdaptiveTriggersViewModel.kt  DualSenseTriggerReportBuilder.kt
app/src/main/java/ps5ctbro/ui/audio/: AudioController.kt  AudioControllerImpl.kt  AudioUiState.kt  DualSenseUsbController.kt  GameModePreset.kt  NativeAudioBridge.kt  UsbAudioModels.kt
app/src/main/java/ps5ctbro/ui/bt/: BtHidOutputProbe.kt  BtInputTestController.kt  BtVibrationController.kt
app/src/main/java/ps5ctbro/ui/components/: AppTopBar.kt  CommonUiComponents.kt
app/src/main/java/ps5ctbro/ui/connection/: ControllerRuntimeState.kt  (+3 more)
app/src/main/res/drawable/: ic_github.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-de/: strings.xml
app/src/main/res/values-es/: strings.xml
app/src/main/res/values-fr/: strings.xml
app/src/main/res/values-hu/: strings.xml
app/src/main/res/values-ja/: strings.xml
app/src/main/res/values-pt-rBR/: strings.xml
app/src/main/res/xml/: device_filter.xml  locales_config.xml
(+35 files in other folders)
